--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -2,96 +2,194 @@
   type: map
   contents:
     - name: Full Name
-      value: Albert Einstein
+      value: Juan Pablo Vigneaux Ariztia
     - name: Date of Birth
-      value: 14th March 1879
+      value: March 3rd, 1989
     - name: Languages
-      value: English, German
+      value: Spanish, English, French, German
+
+
+  
+  
+# \section*{Presentations}
+
+
+ 
+#  \section*{Teaching experience}
+ 
+#  \textbf{Department of Mathematics, Université Paris Diderot -- Paris 7}, Paris, France. \\
+#  Temporary Lecturer (ATER), 2018–-2019.\\
+#  Teaching Assistant, 2015--18.
+#  \begin{itemize}
+#     \item Lecturer: \emph{Elementary algebra and analysis I}, Fall 2017.
+# \item  Teaching assistant: \\
+# \emph{Elementary algebra and analysis I}, Fall 2018 and Spring 2016.\\
+# \emph{Elementary algebra and analysis II}, Spring 2019 and Spring 2015.
+#    \end{itemize}
+
+# \textbf{Faculty of Engineering, Pontificia Universidad Católica de Chile (PUC)}, Santiago, Chile.\\
+# Teaching assistant,  2011--14.
+# \begin{itemize}
+# \item Teaching assistant and course coordinator:\\
+# \emph{Introduction to Mathematical Engineering}, Spring 2014.\\
+# \emph{Stochastic models}, Fall 2011.
+#     \item Teaching assistant:\\
+#     \emph{Numerical Modeling in Engineering}, Fall 2012.\\
+#     \emph{Mathematical Modeling in Engineering}, Spring 2012.
+#    \end{itemize}
+
+# \textbf{Faculty of Mathematics, Pontificia Universidad Católica de Chile (PUC)}, Santiago, Chile.\\
+# Teaching assistant, 2009--12.
+# \begin{itemize}
+#     \item Teaching assistant: \emph{Calculus I} (single variable calculus), \emph{Calculus III} (vector calculus) and \emph{Probability and Statistics}, several times each.
+#    \end{itemize}
+
+
+
+# \section*{Awards and scholarships}
+# \textbf{PGSM Masters Scholarship,} Fondation Sciences Mathématiques de Paris, France, 2014.\\
+# An international academic scholarship that covered the full cost of studying one year in Paris.
+
+# \textbf{Padre Hurtado award,} Pontificia Universidad Católica de Chile, Chile, 2008.\\
+# A university-wide academic scholarship that covered the tuition fees of undergraduate education.
+
+
+# \section*{Additional training}
+
+# European Talbot Workshop: “Topological aspects of quantum field theories,”\\ Winterberg, Germany, 2016.
+
+# Course “Disruptive technologies and public policies,” \\
+# Master 2 École d’Affaires Publiques, Sciences Po, Paris, France, Fall 2015.
+
+# Complex Systems Summer School - Chile, \\Santa Fe Institute – Universidad del Desarrollo, Zapallar, Chile, 2013.
+
+# \section*{Skills and competences}
+# First language: Spanish
+
+# Other languages: French (full professional  proficiency), English (full professional  proficiency), German (limited working proficiency)
+
+# Programming: advanced level in C\# and LaTeX; intermediate level in Java, Python (including scikit-learn, numpy, tensorflow, and keras), AMPL, and Mathematica.
+
+# \section*{Additional information}
+
+# Address: Inselstraße 13, 04229 Leipzig, Germany.\\
+# Phone number: +49 176 43368019  \\
+# E-mail address: \href{jpvigneaux@gmail.com}{jpvigneaux@gmail.com}\\
+# Website: \href{https://webusers.imj-prg.fr/~juan-pablo.vigneaux/}{https://webusers.imj-prg.fr/$\sim$juan-pablo.vigneaux/}\\
+# Citizenship: Chilean 
+
+
+
 
 - title: Education
   type: time_table
   contents:
-    - title: PhD
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1905
+    - title: Doctorate in Mathematics
+      institution: Université de Paris, paris, France
+      year: 2019
       description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
+        - title: Dissertation.
           contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Federal teaching diploma
-      institution: Eidgenössische Technische Hochschule, Zurich, Switzerland
-      year: 1900
+            - "Topology of Statistical Systems: A Cohomological Approach to Information Theory"
+        - title: Supervisor
+          contents: 
+            - Daniel Bennequin
+
+    - title: Master in Fundamental Mathematics
+      institution: Université Pierre et Marie Curie (UPMC), Paris, France
+      year: 2015
       description:
-        - Description 1.
-        - Description 2.
+        - Mention très bien (highest honours)
+
 
 - title: Experience
   type: time_table
   contents:
-    - title: Professor of Theoretical Physics
-      institution: Institute for Advanced Study, Princeton University
-      year: 1933 - 1955
+    - title:  Olga Taussky and John Todd Instructor in Mathematics
+      institution: California Institute of Technology, Pasadena, California, USA
+      year: 2021-Present
       description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Visiting Professor
-      institution: California Institute of Technology, Pasadena, California, US
+        - title: Mentor
+          content: Matilde Marcolli
+
+    - title: Post-doctoral associate
+      institution: Max-Planck-Institut für Mathematik in den Naturwissenschaften, Leipzig, Germany
+      year: 2019-2020
+      description:
+        - title: Supervisor
+          content: Nihat Ay
+        - title: Group
+          content: Information Theory of Cognitive Systems.
+
+    - title:  Doctoral researcher
+      institution: IMJ-PRG - Institut de Mathématiques de Jussieu-Paris Rive Gauche, Paris, France
       year: 1933
       description:
-        - Description 1.
-        - Description 2.
+        - title: Advisor
+          content: Daniel Bennequin
 
-    - title: Director
-      institution: Kaiser Wilhelm Institute for Physics, Berlin, Germany.
-      year: 1917-1933
-
-    - title: Professor of Theoretical Physics
-      institution: Karl-Ferdinand University, Prague, Czechoslovakia
-      year: 1911 - 1917
+    - title: Research assistant
+      institution: ANESTOC - Center for Stochastic Analysis and Applications, Santiago, Chile.
+      year: 2012-2014
       description:
+        - title: Advisor
+          content: Rolando Rebolledo
 
-    - title: Associate Professor of Theoretical Physics
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1909 - 1911
+    - title: Research Intern
+      institution: Karl-Ferdinand University, Prague, Czechoslovakia
+      year: January–-March, 2013
+      description:
+        - title: Advisor
+          content: Nicolas Broutin
+        - title: Group
+          content: RAP (Networks, Algorithms and Probabilities)
+      
 
-- title: Open Source Projects
-  type: time_table
-  contents:
-    - title: <a href="https://github.com/alshedivat/al-folio">al-folio</a>
-      year: 2015-now
-      description: A beautiful, simple, clean, and responsive Jekyll theme for academics.
 
-- title: Honors and Awards
-  type: time_table
-  contents:
-    - year: 1921
-      items: 
-        - Nobel Prize in Physics 
-        - Matteucci Medal
-    - year: 2029
-      items: 
-        - Max Planck Medal
+# Invited talk  ``Functors on posets, extra-fine sheaves, and interaction decompositions'' at the seminar \emph{Algebraic and Combinatorial Perspectives in the Mathematical Sciences} (online), October 30, 2020.
 
-- title: Academic Interests
-  type: nested_list
-  contents:
-    - title: Topic 1.
-      items: 
-        - Description 1.
-        - Description 2.
-    - title: Topic 2.
-      items:
-        - Description 1.
-        - Description 2.
+# Invited talk ``Cohomology of statistical systems'' at the Robert Ghrist's seminar, University of Pennsylvania, Philadelphia, PA, USA, October 23, 2019.
 
-- title: Other Interests
-  type: list
-  contents:
-    - <u>Hobbies:</u> Hobby 1, Hobby 2, etc.
+# Invited talk ``Cohomology of statistical systems'' at the \emph{Category Theory Seminar}, Johns Hopkins University, Baltimore, MD, USA, October 22, 2019.
+
+# Invited talk ``Information cohomology: an overview'' at \emph{OASIS: The Oxford Advanced Seminar on Informatic Structures}, Oxford, England, January 25, 2019. 
+
+# Invited talk ``Une introduction à la topologie de l'information'' at the seminar \emph{Higher categories, polygraphs and homotopy}, 
+# Université Paris Diderot, Paris, France, September 28, 2018. 
+
+# Contributed talk ``Information theory associated to Tsallis' 2-entropy'' at the conference \emph{Latin American Week on Coding and Information}, Campinas, Brazil, July 26, 2018.
+ 
+# %Poster at the conference Entropy 2018, Barcelona, Spain.
+
+# Contributed talk ``Information topology and probabilistic graphical models'' at the conference \emph{Applied Algebraic Topology}, Sapporo, Japan, August 8, 2017.
+
+# Invited talk ``Cohomologie de l'information'' at the seminar \emph{Geometry and mathematical physics}, 
+# Université Paris Diderot, Paris, France, November 4, 2016.
+
+# - title: Honors and Awards
+#   type: time_table
+#   contents:
+#     - year: 1921
+#       items: 
+#         - Nobel Prize in Physics 
+#         - Matteucci Medal
+#     - year: 2029
+#       items: 
+#         - Max Planck Medal
+
+# - title: Academic Interests
+#   type: nested_list
+#   contents:
+#     - title: Topic 1.
+#       items: 
+#         - Description 1.
+#         - Description 2.
+#     - title: Topic 2.
+#       items:
+#         - Description 1.
+#         - Description 2.
+
+# - title: Other Interests
+#   type: list
+#   contents:
+#     - <u>Hobbies:</u> Hobby 1, Hobby 2, etc.
