Updated research section; divided it in various pages.

--- a/_config.yml
+++ b/_config.yml
@@ -185,6 +185,9 @@ collections:
   Ma4:
     output: true
     permalink: /Ma4/:path/
+  Research:
+    output: true
+    permalink: /Research/:path/
 
 announcements:
   enabled: false
